--- a/style.css
+++ b/style.css
@@ -14,7 +14,16 @@ body{
     line-height: 1.5;
 }
 
-nav{
+div {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+p {
+    color:white;
+}
+
+
+.navbar {
     position: relative;
     width: 100%;
     height: 40px;
@@ -24,15 +33,15 @@ nav{
     position: sticky;
     top: 0;
 }
-nav ul{
+.navbar ul{
     display: flex;
-    float: right;
+    float: center;
     padding: 0 10px;
 }
-nav ul li{
+.navbar ul li{
     list-style-type: none;
 }
-nav ul li a{
+.navbar ul li a{
     display: block;
     text-decoration: none;
     color: azure;
@@ -40,7 +49,7 @@ nav ul li a{
     text-transform: uppercase;
     font-weight: bold;
 }
-nav ul li a:hover{
+.navbar ul li a:hover{
     background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -120,4 +129,5 @@ nav ul li a:hover{
 .acknowledgement{
     margin-top: 80px;
     background-color: rgb(253, 252, 251);
+    text-align: center
 }
