--- a/style.css
+++ b/style.css
@@ -14,16 +14,12 @@ body{
     line-height: 1.5;
 }
 
-div {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
 p {
     color:white;
 }
 
 
-.navbar {
+nav {
     position: relative;
     width: 100%;
     height: 40px;
@@ -33,15 +29,15 @@ p {
     position: sticky;
     top: 0;
 }
-.navbar ul{
+nav ul{
     display: flex;
     float: center;
     padding: 0 10px;
 }
-.navbar ul li{
+nav ul li{
     list-style-type: none;
 }
-.navbar ul li a{
+nav ul li a{
     display: block;
     text-decoration: none;
     color: azure;
@@ -49,7 +45,7 @@ p {
     text-transform: uppercase;
     font-weight: bold;
 }
-.navbar ul li a:hover{
+nav ul li a:hover{
     background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -95,6 +91,8 @@ p {
     width: 70%;
     padding: 5px;
     border: black 1px solid;
+    background-color: black;
+    color: rgb(161, 159, 159);
 }
 .box a{
     text-decoration: none;
@@ -103,7 +101,8 @@ p {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color:rgba(0, 0, 0, 0.6)
+    background-color: black;
+    color: rgb(161, 159, 159);
 }
 
 .img{
@@ -128,6 +127,7 @@ p {
 
 .acknowledgement{
     margin-top: 80px;
-    background-color: rgb(253, 252, 251);
-    text-align: center
+    background-color: rgba(0, 0, 0, 0.6);
+    color: azure;
+    text-align: center;
 }
