--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p {
 }
 
 
-nav {
+nav{
     position: relative;
     width: 100%;
     height: 40px;
@@ -29,9 +29,10 @@ nav {
     position: sticky;
     top: 0;
 }
+
 nav ul{
     display: flex;
-    float: center;
+    float: right;
     padding: 0 10px;
 }
 nav ul li{
