--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 p {
-    color:white;
+    color:rgb(161, 159, 159);
 }
 
 
@@ -34,6 +34,7 @@ nav ul{
     display: flex;
     float: right;
     padding: 0 10px;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 nav ul li{
     list-style-type: none;
@@ -45,6 +46,7 @@ nav ul li a{
     padding: 0 15px;
     text-transform: uppercase;
     font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 nav ul li a:hover{
     background-color: rgba(0, 0, 0, 0.6);
@@ -129,6 +131,6 @@ nav ul li a:hover{
 .acknowledgement{
     margin-top: 80px;
     background-color: rgba(0, 0, 0, 0.6);
-    color: azure;
+    color: rgb(161, 159, 159);
     text-align: center;
 }
