--- a/style.css
+++ b/style.css
@@ -134,6 +134,6 @@ nav ul li a:hover{
 .acknowledgement{
     margin-top: 80px;
     background-color: rgba(0, 0, 0, 0.6);
-    color: rgb(161, 159, 159);
+    color: azure;
     text-align: center;
 }
