--- a/style.css
+++ b/style.css
@@ -120,8 +120,10 @@ nav ul li a:hover{
     position: relative;
     width: 100%;
     padding-bottom: 56.25%;
+    text-align: center;
     height: 0;
     background-color: rgba(0, 0, 0, 0.6);
+    color: azure;
 }
 .iframe-container iframe{
     position: absolute;
