--- a/style.css
+++ b/style.css
@@ -112,8 +112,12 @@ nav ul li a:hover{
 
 .img{
     display: inline;
-    width: 60%;
+    width: 80%;
     margin-top: 10px;
+}
+
+#white-col {
+    color: white;
 }
 
 .iframe-container{
@@ -123,7 +127,6 @@ nav ul li a:hover{
     text-align: center;
     height: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    color: azure;
 }
 .iframe-container iframe{
     position: absolute;
